k8s/admin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin
  namespace: streamingapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin
  template:
    metadata:
      labels:
        app: admin
    spec:
      containers:
        - name: admin
          image: 508564775932.dkr.ecr.ap-south-1.amazonaws.com/streamingapp/admin-service:1
          imagePullPolicy: Always

          ports:
            - containerPort: 3003

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: admin
  namespace: streamingapp
spec:
  type: ClusterIP
  selector:
    app: admin
  ports:
    - port: 3003
      targetPort: 3003
      protocol: TCP
