k8s/auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
  namespace: streamingapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          image: 508564775932.dkr.ecr.ap-south-1.amazonaws.com/streamingapp/auth-service:1
          imagePullPolicy: Always

          ports:
            - containerPort: 3001

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"

          readinessProbe:
            httpGet:
              path: /health
              port: 3001
            initialDelaySeconds: 15
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /health
              port: 3001
            initialDelaySeconds: 30
            periodSeconds: 20

---
apiVersion: v1
kind: Service
metadata:
  name: auth
  namespace: streamingapp
spec:
  type: ClusterIP
  selector:
    app: auth
  ports:
    - port: 3001
      targetPort: 3001
      protocol: TCP
