k8s/chat.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat
  namespace: streamingapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat
  template:
    metadata:
      labels:
        app: chat
    spec:
      containers:
        - name: chat
          image: 508564775932.dkr.ecr.ap-south-1.amazonaws.com/streamingapp/chat-service:1
          imagePullPolicy: Always

          ports:
            - containerPort: 3004

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: chat
  namespace: streamingapp
spec:
  type: ClusterIP
  selector:
    app: chat
  ports:
    - port: 3004
      targetPort: 3004
      protocol: TCP
