k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: streamingapp-ingress
  namespace: streamingapp
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: "15"
    alb.ingress.kubernetes.io/success-codes: "200"
    
spec:
  rules:
    - http:
        paths:
          - path: /api/auth
            pathType: Prefix
            backend:
              service:
                name: auth
                port:
                  number: 3001

          - path: /api/streaming
            pathType: Prefix
            backend:
              service:
                name: streaming
                port:
                  number: 3002

          - path: /api/admin
            pathType: Prefix
            backend:
              service:
                name: admin
                port:
                  number: 3003

          - path: /api/chat
            pathType: Prefix
            backend:
              service:
                name: chat
                port:
                  number: 3004

          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
